@@ -442,6 +442,7 @@ Support for Java 1.4 runtime dropped, PMD now requires Java 5 or higher.  PMD ca
 Text renderer is now silent if there's no violation instead of displaying "No problems found!"
 RuleSet short names now require a language prefix, 'basic' is now 'java-basic', and 'rulesets/basic.xml' is now 'rulesets/java/basic.xml'
 The JSP RuleSets are now in the 'jsp' language, and are 'jsp-basic', 'jsp-basic-jsf', 'rulesets/jsp/basic.xml' and 'rulesets/jsp/basic-jsp.xml'
+Enhanced logging in the ClassTypeResolver to provide more detailed messaging.
 
 New Java rules:
 
